--- a/src/HeaderOption.css
+++ b/src/HeaderOption.css
@@ -10,3 +10,13 @@
 .headerOption:hover {
   color: black;
 }
+
+.headerOption__icon {
+  object-fit: contain;
+  height: 25px !important;
+}
+
+.headerOption__title {
+  font-size: 12px;
+  font-weight: 400;
+}
